update get product and product category
